# task_manager

./: .coveragerc  .flake8  .gitignore  Makefile  Pipfile  Procfile  README.md  coverage.xml  db.sqlite3  psycopg2-2.9.6-cp38-cp38-linux_x86_64.whl  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_label_name.py  0003_alter_label_name.py
task_manager/labels/tests/: test_forms.py  test_urls.py  test_views.py
task_manager/lables/: apps.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_status_name.py  0003_alter_status_options_alter_status_name.py  0003_alter_status_options_alter_status_status_name.py  0004_alter_status_name.py
task_manager/statuses/tests/: test_urls.py  test_view.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_description.py  0003_alter_task_author_alter_task_created_at_and_more.py  0004_alter_task_executor_alter_task_labels.py  0005_alter_task_executor_alter_task_labels.py  0006_alter_task_executor_alter_task_labels.py  0007_alter_task_executor_alter_task_labels.py  0008_alter_task_executor_alter_task_labels.py  0009_alter_task_executor_alter_task_labels.py  0010_alter_task_executor_alter_task_labels.py  0011_alter_task_options.py
task_manager/tasks/tests/: test_views.py
task_manager/templates/: index.html  login.html  login_new.html  navbar.html  navbar_for_auth.html  registration.html  testr.html  testr2.html  update.html  users.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels.html
task_manager/tests/: test_urls.py  test_views.py
task_manager/users/: forms.py  models.py  q.py  urls.py  views.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+21 files in other folders)
