[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vera Dobrodeeva <dobro.vera@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
