[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vera Dobrodeeva <dobro.vera@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8.2"
Django = "^4.2.1"
gunicorn = "^20.1.0"
pip = "^23.1.2"
flake8 = "4.0.1"
python-dotenv = "0.10.3"
django-bootstrap4 = "^23.1"
i18n = "^0.2"
coverage = "^7.2.7"
django-filter = "^23.2"
dj-database-url = "0.5.0"
rollbar = "^0.16.3"
psycopg2 = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
