[coverage:run]
branch = True

[flake8]
accept-encodings = utf-8
max-complexity = 6
statistics = False
max-line-length = 80
doctests = True
enable-extensions = G
isort-show-traceback = True

# django
exclude=*/migrations/*

# clean default ignore list
ignore =

per-file-ignores =
  hexlet_python_package/scripts/*.py: WPS421, ./task_manager/settings.py:E501

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"